TMGAAW-8 Set explicit versions for packages we install while building our docker image.
Issue(s):
  https://workbookers.atlassian.net/browse/TMGAAW-8

We added a linter for Dockerfile that scans for commons issues and fix
them.

There is a new command line tool under rails/bin/dockle thans scans the
tmg_rails docker image and give indication on how to fix the issues that
it found.

--- a/rails/Dockerfile
+++ b/rails/Dockerfile
@@ -1,13 +1,11 @@
 FROM ruby:3.0.2-alpine
 
-RUN apk add --no-cache build-base postgresql-dev postgresql-client
-RUN bundle config --global frozen 0
+RUN apk add --no-cache build-base=0.5-r2 postgresql-dev=13.4-r0 postgresql-client=13.4-r0
 
 WORKDIR /opt/tmg/
 
 COPY Gemfile Gemfile.lock ./
-RUN gem install bundler
-RUN bundle install
+RUN gem install bundler:2.2.23 && bundle install
 
 COPY . .
 
