--- a/rails/Gemfile
+++ b/rails/Gemfile
@@ -11,13 +11,13 @@ gem "pg", "~> 1.1"
 gem "puma", "~> 5.0"
 
 # Use JavaScript with ESM import maps [https://github.com/rails/importmap-rails]
-gem 'importmap-rails', '~> 0.6.1'
+gem "importmap-rails", "~> 0.6.1"
 
-# Hotwire's SPA-like page accelerator [https://turbo.hotwired.dev]
-gem 'turbo-rails', '~> 0.7.14'
+# Hotwire"s SPA-like page accelerator [https://turbo.hotwired.dev]
+gem "turbo-rails", "~> 0.7.14"
 
-# Hotwire's modest JavaScript framework [https://stimulus.hotwired.dev]
-gem 'stimulus-rails', '~> 0.5.3'
+# Hotwire"s modest JavaScript framework [https://stimulus.hotwired.dev]
+gem "stimulus-rails", "~> 0.5.3"
 
 # Build JSON APIs with ease [https://github.com/rails/jbuilder]
 gem "jbuilder", "~> 2.7"
@@ -26,44 +26,52 @@ gem "jbuilder", "~> 2.7"
 gem "redis", "~> 4.0"
 
 # Reduces boot times through caching; required in config/boot.rb
-gem 'bootsnap', '~> 1.9'
+gem "bootsnap", "~> 1.9"
 
 # Use Active Model has_secure_password [https://guides.rubyonrails.org/active_model_basics.html#securepassword]
-gem 'bcrypt', '~> 3.1'
+gem "bcrypt", "~> 3.1"
 #
 # Use Active Storage variants [https://guides.rubyonrails.org/active_storage_overview.html#transforming-images]
 gem "image_processing", "~> 1.2"
 
 # Timezone info data
-gem 'tzinfo-data', '~> 1.2021'
+gem "tzinfo-data", "~> 1.2021"
+
+group :test do
+  # Use capybara to test drive our ui []https://github.com/teamcapybara/capybara
+  gem "capybara", "~> 3.35"
+end
 
 group :development, :test do
   # Start debugger with binding.b [https://github.com/ruby/debug]
-  gem 'debug', '~> 1.1'
+  gem "debug", "~> 1.1"
 
   # Use rspec rails to write tests for our app [https://github.com/rspec/rspec-rails]
-  gem 'rspec-rails', '~> 5.0'
+  gem "rspec-rails", "~> 5.0"
 
   # Use ffaker to generate fake data [https://github.com/ffaker/ffaker]
-  gem 'ffaker', '~> 2.19'
+  gem "ffaker", "~> 2.19"
 
   # Use factory bot to quickly generate test data [https://github.com/thoughtbot/factory_bot]
-  gem 'factory_bot_rails', '~> 6.2'
+  gem "factory_bot_rails", "~> 6.2"
+
+  # Use webdrivers to manage browsers we use to test the app [
+  gem 'webdrivers', '~> 4.6'
 end
 
 group :development do
   # Use console on exceptions pages [https://github.com/rails/web-console]
-  gem 'web-console', '~> 4.1'
+  gem "web-console", "~> 4.1"
 
-  gem 'strong_versions', '~> 0.4.5'
+  gem "strong_versions", "~> 0.4.5"
 
-  gem 'bundler-audit', '~> 0.9.0'
+  gem "bundler-audit", "~> 0.9.0"
 
   # Add speed badges [https://github.com/MiniProfiler/rack-mini-profiler]
-  gem 'rack-mini-profiler', '~> 2.3', '>= 2.3.3'
+  gem "rack-mini-profiler", "~> 2.3", ">= 2.3.3"
 
-  gem 'guard', '~> 2.18'
-  gem 'guard-rspec', '~> 4.7'
+  gem "guard", "~> 2.18"
+  gem "guard-rspec", "~> 4.7"
 end
 
-gem "capybara", "~> 3.35"
+
