TMGAAW-13 Fix standard rb warnings.
Issue(s):
  https://workbookers.atlassian.net/browse/TMGAAW-13

Why was this change needed? Wrapped at 72 characters or so.

--- a/rails/Gemfile
+++ b/rails/Gemfile
@@ -56,7 +56,7 @@ group :development, :test do
   gem "factory_bot_rails", "~> 6.2"
 
   # Use webdrivers to manage browsers we use to test the app [
-  gem 'webdrivers', '~> 4.6'
+  gem "webdrivers", "~> 4.6"
 end
 
 group :development do
@@ -73,5 +73,3 @@ group :development do
   gem "guard", "~> 2.18"
   gem "guard-rspec", "~> 4.7"
 end
-
-
