--- a/.github/workflows/ruby.yml
+++ b/.github/workflows/ruby.yml
@@ -36,31 +36,14 @@ jobs:
         ruby-version: ${{ matrix.ruby-version }}
         bundler-cache: true
 
-    - name: Security checks for our depedencis
-      run: |
-        bundle install
-        bundle exec bundler-audit
-
-
-    - name: Audit security vulnerabilities with brakeman
-      run: |
-        bundle exec brakeman
-
-    - name: Audit gem dependencies for strong versions
-      run: |
-        bundle exec strong_versions
-
-    - name: Audit code smells with reek
-      run: |
-        bundle exec reek
-
     - name: Run tests
       run: |
+        cd rails
         bundle exec rails db:create
-         bundle exec rails db:migrate
-         bundle exec rails db:rollback
-         bundle exec rails db:migrate
-         bundle exec rspec --fail-fast
+        bundle exec rails db:migrate
+        bundle exec rails db:rollback
+        bundle exec rails db:migrate
+        bundle exec rspec --fail-fast
       env:
         RAILS_ENV: test
         TMG_DATABASE_USER: tiakmugaaw_test
