TMGAAW-16 Fix working directory in github action
Story:
  https://workbookers.atlassian.net/browse/TMGAAW-16

--- a/.github/workflows/ruby.yml
+++ b/.github/workflows/ruby.yml
@@ -1,7 +1,7 @@
 name: Ruby
 defaults:
   run:
-    working-directory: ./workook_api
+    working-directory: ./rails
 on:
   push:
     branches: [ master ]
@@ -38,7 +38,7 @@ jobs:
 
     - name: Run tests
       run: |
-        cd rails
+        bundle install
         bundle exec rails db:create
         bundle exec rails db:migrate
         bundle exec rails db:rollback
