--- a/.github/workflows/ruby.yml
+++ b/.github/workflows/ruby.yml
@@ -1,4 +1,4 @@
-name: Ruby
+name: RailsApp
 defaults:
   run:
     working-directory: ./rails
@@ -12,7 +12,7 @@ jobs:
     runs-on: ubuntu-latest
     strategy:
       matrix:
-        ruby-version: ['2.6.8', '2.7.4', '3.0.2']
+        ruby-version: ['2.7.4', '3.0.2']
 
     steps:
     - uses: actions/checkout@v2
